<resources>
    <string name="app_name">GadsProject</string>

    <!-- MainActivity's strings -->
    <string name="leaderboard">Leaderboard</string>
    <string name="leaderboard_all_caps">LEADERBOARD</string>
    <string name="submit">Submit</string>
    <string name="learning_leaders">Learning Leaders</string>
    <string name="skill_iq_leaders">Skill IQ Leaders</string>

    <!-- SplashActivity -->
    <string name="gads_leaderboard">GADS Leaderboard</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_link">Project on GITHUB (link)</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_not_successful">Submission not Successful</string>
</resources>