<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkg"
    tools:context=".views.SubmitActivity">

    <TextView
        android:id="@+id/project_submission_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/project_submission"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/holo_orange_light"
        app:layout_constraintEnd_toEndOf="@+id/project_submission_textview"
        app:layout_constraintStart_toStartOf="@+id/project_submission_textview"
        app:layout_constraintTop_toBottomOf="@+id/project_submission_textview" />

    <EditText
        android:id="@+id/firstname_edittext"
        style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="4dp"
        android:background="@android:color/white"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textPersonName"
        android:text="@string/first_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@+id/lastname_edittext"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <EditText
        android:id="@+id/lastname_edittext"
        style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:text="@string/last_name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstname_edittext"
        app:layout_constraintTop_toTopOf="@+id/firstname_edittext" />

    <EditText
        android:id="@+id/project_link_edittext"
        style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
        android:background="@android:color/background_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/project_link"
        android:hint="@string/project_link"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edittext" />

    <EditText
        android:id="@+id/email_edittext"
        style="@style/Base.Widget.MaterialComponents.AutoCompleteTextView"
        android:background="@android:color/background_light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email_address"
        android:text="@string/email_address"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstname_edittext" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:text="@string/submit"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/project_link_edittext" />
</androidx.constraintlayout.widget.ConstraintLayout>